--- a/Netflix Subscriber Churn Prediction/notebooks/01_data_exploration.ipynb
+++ b/Netflix Subscriber Churn Prediction/notebooks/01_data_exploration.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "debf0d16",
+   "metadata": {},
+   "source": [
+    "## Exploratory Data Analysis (EDA) for Netflix Subscriber Churn Prediction"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "id": "8467ff93",
